--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="image-title">Strategy</h3>
@@ -185,7 +185,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="image-title">Punctuality</h3>
@@ -197,7 +197,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-diagram1"></use>
+                  <use href="./images/icons.svg#icon-diagram1"></use>
                 </svg>
               </div>
               <h3 class="image-title">Diligence</h3>
@@ -209,7 +209,7 @@
             <li class="main-item feature-item">
               <div class="feature-icon-container">
                 <svg class="feature-icon" width="64" height="64">
-                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="image-title">Technologies</h3>
@@ -243,28 +243,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -286,28 +286,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -329,28 +329,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -372,28 +372,28 @@
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-item">
                     <a class="icon-link" href="">
                       <svg class="uorteam-icon" width="16" height="16">
-                        <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -527,28 +527,28 @@
             <li class="icon-item">
               <a class="icon-link icon-link-footer" href="">
                 <svg class="uorteam-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-item">
               <a class="icon-link icon-link-footer" href="">
                 <svg class="uorteam-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-item">
               <a class="icon-link icon-link-footer" href="">
                 <svg class="uorteam-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-item">
               <a class="icon-link icon-link-footer" href="">
                 <svg class="uorteam-icon" width="24" height="24">
-                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
