--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           <h2 class="main-title">Our Portfolio</h2>
           <ul class="main-list portfolio-list list">
             <li class="portfolio-item main-item">
-              <div class="ProjectCard">
+              <div class="project-card">
                 <img
                   class="main-images"
                   src="./images/OurPortfolio/img4.jpg"
@@ -419,7 +419,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="projectcard-text">
+                <p class="project-card-text">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
@@ -431,7 +431,7 @@
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <div class="ProjectCard">
+              <div class="project-card">
                 <img
                   class="main-images"
                   src="./images/OurPortfolio/img5.jpg"
@@ -439,7 +439,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="projectcard-text">
+                <p class="project-card-text">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
@@ -452,7 +452,7 @@
             </li>
 
             <li class="portfolio-item main-item">
-              <div class="ProjectCard">
+              <div class="project-card">
                 <img
                   class="main-images"
                   src="./images/OurPortfolio/img6.jpg"
@@ -460,7 +460,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="projectcard-text">
+                <p class="project-card-text">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
@@ -472,7 +472,7 @@
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <div class="ProjectCard">
+              <div class="project-card">
                 <img
                   class="main-images"
                   src="./images/OurPortfolio/img7.jpg"
@@ -480,7 +480,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="projectcard-text">
+                <p class="project-card-text">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
@@ -492,7 +492,7 @@
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <div class="ProjectCard">
+              <div class="project-card">
                 <img
                   class="main-images"
                   src="./images/OurPortfolio/img8.jpg"
@@ -500,7 +500,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="projectcard-text">
+                <p class="project-card-text">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
@@ -512,7 +512,7 @@
               </div>
             </li>
             <li class="portfolio-item main-item">
-              <div class="ProjectCard">
+              <div class="project-card">
                 <img
                   class="main-images"
                   src="./images/OurPortfolio/img9.jpg"
@@ -520,7 +520,7 @@
                   width="360"
                   height="300"
                 />
-                <p class="projectcard-text">
+                <p class="project-card-text">
                   14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
                   Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                 </p>
